// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> renders 1`] = `
<div>
  <div
    class="sc-aXZVg gZgZQL"
  >
    One Aside title
  </div>
</div>
`;

exports[`<Container /> renders narrow 1`] = `
<div>
  <div
    class="sc-aXZVg elbebC"
  >
    Narrow contained
  </div>
</div>
`;

exports[`<Container /> renders narrow without padding 1`] = `
<div>
  <div
    class="sc-aXZVg dPpwpV"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;

exports[`<Container /> renders without padding even if the prop is specified, because the narrow prop is not 1`] = `
<div>
  <div
    class="sc-aXZVg gZgZQL"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;
